--- a/robotarium_gym/scenarios/MaterialTransport/config.yaml
+++ b/robotarium_gym/scenarios/MaterialTransport/config.yaml
@@ -1,16 +1,17 @@
 #Arguments needed to create proper paths to everything
 scenario: MaterialTransport #name of the folder inside scenarios
-model_config_file: qmix.json #The config file from sacred for the model
-model_file: qmix.th #The saved model weights
-actor_file: rnn_agent #The file the actor model architecture lives in
-actor_class: RNNAgent #The class the actor model architecture is in
+model_config_file: qmix_hyper_rnn.json #The config file from sacred for the model
+model_file: qmix/hyper_rnn/1/agent.th #The saved model weights
+actor_file: hyper_rnn_agent #The file the actor model architecture lives in
+actor_class: HyperRNNAgent #The class the actor model architecture is in
 env_file: MaterialTransport #The .py file this environment is in
 env_class: MaterialTransport #This needs to have all of the functionalities of a gym to work
 
 #Arguments needed by main, will not affect training
-n_actions: 20 #The number of actions available for the agent
-episodes: 2 #Number of episodes to run for
+n_actions: 5 #The number of actions available for the agent
+episodes: 1000 #Number of episodes to run for
 shared_reward: True #Purely for evaluation information
+eval_dir: eval_output
 
 seed: 0 #sets the seed. Set to -1 to use a random seed.
 
@@ -44,7 +45,7 @@ unload_multiplier: .075
 load_multiplier: .025
 end_goal_width: .5
 time_penalty: -0.1
-capability_aware: False #Whether or not the agents know their own capabilities. Should probably not use ids if this is true
+capability_aware: True #Whether or not the agents know their own capabilities. Should probably not use ids if this is true
 zone1_radius: .35
 zone1:
   distribution: 'normal'
