--- a/robotarium_gym/scenarios/MaterialTransport/config.yaml
+++ b/robotarium_gym/scenarios/MaterialTransport/config.yaml
@@ -1,18 +1,22 @@
 #Arguments needed to create proper paths to everything
 scenario: MaterialTransport #name of the folder inside scenarios
-model_config_file: qmix.json #The config file from sacred for the model
-model_file: qmix.th #The saved model weights
+model_config_file: qmix_rnn.json #The config file from sacred for the model
+model_file: qmix_rnn_unaware.th #The saved model weights
 actor_file: rnn_agent #The file the actor model architecture lives in
 actor_class: RNNAgent #The class the actor model architecture is in
 env_file: MaterialTransport #The .py file this environment is in
 env_class: MaterialTransport #This needs to have all of the functionalities of a gym to work
 
 #Arguments needed by main, will not affect training
-n_actions: 20 #The number of actions available for the agent
-episodes: 2 #Number of episodes to run for
-shared_reward: True #Purely for evaluation information
+n_actions: 5 #The number of actions available for the agent
+n_inputs: 18
+episodes: 500 #Number of episodes to run for
+shared_reward: False #Purely for evaluation information
+eval_dir: eval
+save_eval_output: True
 
-seed: 0 #sets the seed. Set to -1 to use a random seed.
+# seed: 0 #sets the seed. Set to -1 to use a random seed.
+seed: 76 # eval seed
 
 #Arguments neeeded for most scenarios
 n_agents: 4 #Number of agents to run
@@ -54,3 +58,6 @@ zone2:
   distribution: 'normal'
   loc: 15
   scale: 4
+power_decay: False
+decay_rate: 0.99
+motor_failure: False
