--- a/robotarium_gym/scenarios/MaterialTransport/config.yaml
+++ b/robotarium_gym/scenarios/MaterialTransport/config.yaml
@@ -1,7 +1,7 @@
 #Arguments needed to create proper paths to everything
 scenario: MaterialTransport #name of the folder inside scenarios
 model_config_file: qmix_rnn.json #The config file from sacred for the model
-model_file: qmix_rnn_unaware.th #The saved model weights
+model_file: qmix_rnn_aware.th #The saved model weights
 actor_file: rnn_agent #The file the actor model architecture lives in
 actor_class: RNNAgent #The class the actor model architecture is in
 env_file: MaterialTransport #The .py file this environment is in
@@ -48,7 +48,7 @@ unload_multiplier: .075
 load_multiplier: .025
 end_goal_width: .5
 time_penalty: -0.1
-capability_aware: False #Whether or not the agents know their own capabilities. Should probably not use ids if this is true
+capability_aware: True #Whether or not the agents know their own capabilities. Should probably not use ids if this is true
 zone1_radius: .35
 zone1:
   distribution: 'normal'
