--- a/robotarium_gym/scenarios/PredatorCapturePrey/config.yaml
+++ b/robotarium_gym/scenarios/PredatorCapturePrey/config.yaml
@@ -3,7 +3,7 @@ scenario: PredatorCapturePrey #name of the folder inside scenarios
 
 model_config_file: qmix_rnn.json
 model_file: qmix_rnn_unaware.th
-model_dir: PCP/RNNUnaware
+model_dir: PCP-HARD/RNNAware
 
 actor_file: rnn_agent
 actor_class: RNNAgent
@@ -39,8 +39,8 @@ predator: 2
 capture: 2
 # predator_radius: [.4, .45, .5, .55, .6] # ID
 # capture_radius: [.2, .25, .3, .35, .4] # ID
-predator_radius: [.25, .3, .35, .65, .7, .75] # OOD
-capture_radius: [.05, .1, .15, .45, .5, .55]  # OOD
+predator_radius: [.2, .25, .3, .35, .4] # HARD
+capture_radius: [.1, .125, .15, .175, .2]  # HARD
 capability_aware: False #If true, the agents know their capture/sensing radius. Probably shouldn't use ids if true. Make sure this argument matches how the models were trained
 penalize_violations: True #If true, agents get a negative reward for collisions or boundary infractions and the episode stops
 show_figure_frequency: -1 #Set to -1 to turn off figures. Needs to be 1 when submitting to Robotarium
@@ -54,3 +54,7 @@ enable_logging: False # Uses tensorflow summary writer to log results
 device: "/cpu:0" # Specify the device for logger
 save_gif: False # Save the gif; Note: Make sure to set show_figure_frequency
 gif_frequency: 29 # Frequency at which frames need to be saved for gif creation
+
+sensor_decay: True
+decay_rate: 0.999
+sensor_failure: False
